--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
+    "i18next": "^25.2.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.6.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7"
